# fmql

./: .gitignore  Cargo.toml  README.md
examples/: basic_listing.rs  filtering_grouping.rs  group_by_updates.rs  sql_queries.rs
src/: app.rs  cli.rs  display.rs  error.rs  file.rs  lib.rs  main.rs
src/sql/: ast.rs  dialect.rs  executor.rs  executor_tests.rs  mod.rs  parser.rs  parser_tests.rs
