[package]
name = "ls-rs"
version = "0.2.0"
edition = "2024"
authors = ["Chris Mann"]
description = "A fast and feature-rich file manager written in Rust"
license = "MIT"
repository = "https://github.com/chriswmann/ls-rs"
homepage = "https://github.com/chriswmann/ls-rs"
keywords = ["file-manager", "file-listing", "cli", "filesystem", "ls"]
categories = ["filesystem", "command-line-utilities"]
readme = "README.md"
include = [
    "src/**/*.rs",
    "README.md",
    "LICENSE"
]

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
sqlparser = "0.55.0"
thiserror = "1.0.57"
regex = "1.10.3"
lazy_static = "1.4.0"
tempfile = "3.10.0"
walkdir = "2.4.0"
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
glob = "0.3.1"

[dev-dependencies]
tempfile = "3.10.0"
pretty_assertions = "1.4.0"

[[example]]
name = "basic_listing"
path = "examples/basic_listing.rs"

[[example]]
name = "filtering_grouping"
path = "examples/filtering_grouping.rs"

[[example]]
name = "sql_queries"
path = "examples/sql_queries.rs"
